@@ -20,6 +20,10 @@ Version 1.8.9
        diffing from server root. (Stefan)
 - BUG: Issue #675: bug-id field not set correctly
        for a restarted commit. (Stefan)
+- BUG: Issue #676: file diff dialog sorts
+       case-sensitive. (Stefan)
+- BUG: Issue #677: Escape must not close dialog if
+       an autocompletion is in progress. (Stefan)
 
 Version 1.8.8
 - BUG: Issue #640: Restore after commit - Unchecked
